src/test/ui/underscore-lifetime/where-clause-inherent-impl-ampersand.rust2018.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/where-clause-inherent-impl-ampersand.rs:13:17
   |
LL |     T: WithType<&u32>
   |                 ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ impl<'a, T> Foo<T>
LL | where
LL ~     T: WithType<&'a u32>
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
